# nkDSL

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  formatting.yaml  publish.yaml
docs/: Makefile  changelog.rst  compiler.rst  compiler_operator_lowering_registry.rst  conf.py  index.rst  make.bat  overview.rst  quickstart.rst  requirements.txt
docs/advanced_tutorials/: conditional_emissions.ipynb  custom_iterators.ipynb  custom_predicates.ipynb  extending_emission_clauses.ipynb  index.rst  reading_symbolic_ir.ipynb
docs/api/: index.rst
docs/dsl/: currently_supported.rst  emissions.rst  index.rst  selectors_and_expressions.rst  symbolic_operator.rst
docs/dsl/conditions/: comparisons.rst  index.rst  logical_composition.rst  where.rst
docs/dsl/iterators/: for_each_distinct_pair.rst  for_each_kbody.rst  for_each_pair.rst  for_each_site.rst  globally.rst  index.rst
docs/dsl/linting/: index.rst  messages.rst
docs/dsl/updates/: affine_scatter.rst  identity.rst  index.rst  shift.rst  shift_mod.rst  swap_permute.rst  write.rst
docs/guides/: index.rst
docs/guides/extending_dsl/: emissions.rst  index.rst  iterators.rst  predicates.rst
docs/tutorials/: custom_iterators_and_predicates.ipynb  heisenberg_end_to_end.ipynb  index.rst  ising_end_to_end.ipynb  j1j2_end_to_end.ipynb
src/nkdsl/: __init__.py  configs.py  debug.py
src/nkdsl/compiler/: __init__.py  compiler.py  defaults.py
src/nkdsl/compiler/cache/: __init__.py  store.py
src/nkdsl/core/: __init__.py  base.py  compiled.py  operator.py  sum.py
src/nkdsl/dsl/: __init__.py  _clause_naming.py  clauses.py  context.py  operator.py  rewrite.py  selectors.py
src/nkdsl/errors/: __init__.py  exceptions.py
src/nkdsl/ir/: __init__.py  expressions.py  predicates.py  program.py  term.py  update.py  validate.py
tests/: __init__.py  conftest.py
tests/helpers/: __init__.py  physics_builders.py
tests/integration/: test_compiler_runtime.py
tests/physics/: test_dense_equivalence.py  test_expectation_and_gradients.py  test_vmc_equivalence.py
tests/unit/: test_compiler_components.py  test_conditional_emissions.py  test_core_operator_edges.py  test_core_operators.py  test_diagnostics_pass.py  test_diagnostics_utils.py  test_dsl_basic.py  test_dsl_clause_extensions.py  test_errors_and_configs.py  test_expression_context_and_selectors.py  test_ir_and_compiler_edges.py  test_ir_nodes.py  test_jax_lowerer_internals.py  test_symbol_defaults_and_dtype.py
(+48 files in other folders)
