[build-system]
requires = ["hatchling>=1.26.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "nkDSL"
dynamic = ["version"]
description = "Symbolic operator DSL for NetKet discrete JAX operators"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "nkdsl contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed",
]
dependencies = [
  "netket>=3.20.0",
]

[project.urls]
Homepage = "https://www.github.com/waleed-sh/nkDSL"
Repository = "https://www.github.com/waleed-sh/nkDSL"
Issues = "https://www.github.com/waleed-sh/nkDSL/issues"
Documentation = "https://nkdsl.readthedocs.io/en/latest/"

[project.optional-dependencies]
docs = [
  "sphinx>=8",
  "furo>=2024.8.6",
  "myst-nb>=1.1",
  "ipykernel>=6",
  "ipywidgets>=8",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "black>=26.1.0",
  "sphinx>=8",
  "furo>=2024.8.6",
  "myst-nb>=1.1",
  "ipykernel>=6",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
fallback_version = "0.1.0a0"

[tool.hatch.build.hooks.vcs]
version-file = "src/nkdsl/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nkdsl"]

[tool.hatch.build.targets.wheel.force-include]
"src/nkdsl/py.typed" = "nkdsl/py.typed"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["nkdsl"]
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pyright]
include = ["src/nkdsl"]
exclude = ["tests"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = "none"

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
